<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
	>

	<data>

		<variable
			name="vm"
			type="ude.student.fadu.viewmodel.TopicViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingHorizontal="@dimen/space_l"
		android:paddingBottom="@dimen/space_l"
		android:paddingTop="@dimen/space_xl">

		<TextView
			android:id="@+id/label_topic"
			style="@style/Headline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_topic"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ude.student.fadu.view.component.VerticalSlider
			android:id="@+id/slider"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_marginTop="@dimen/space_l"
			android:layout_marginEnd="@dimen/space_m"
			android:layout_marginBottom="@dimen/space_m"
			android:stepSize="1"
			app:initial="@{vm.topic}"
			android:valueFrom="0"
			android:valueTo="5"
			app:onChange="@{vm.setTopic}"
			app:labelBehavior="gone"
			app:layout_constraintBottom_toTopOf="@id/next_btn"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/label_topic"
			app:tickColor="@color/colorPrimary"
			app:trackColor="@color/colorPrimaryTransparent"
			app:trackHeight="@dimen/space_s" />

		<TextView
			android:id="@+id/label_slider_0"
			style="@style/Description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/space_xl"
			android:layout_marginTop="@dimen/slider_label_offset"
			android:layout_marginEnd="@dimen/space_m"
			android:text="@string/label_topic_1"
			app:layout_constraintEnd_toStartOf="@id/slider"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@id/slider" />

		<TextView
			android:id="@+id/label_slider_1"
			style="@style/Description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/space_xl"
			android:layout_marginEnd="@dimen/space_m"
			android:text="@string/label_topic_2"
			app:layout_constraintBottom_toTopOf="@id/label_slider_2"
			app:layout_constraintEnd_toStartOf="@id/slider"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/label_slider_0" />

		<TextView
			android:id="@+id/label_slider_2"
			style="@style/Description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/space_xl"
			android:layout_marginEnd="@dimen/space_m"
			android:text="@string/label_topic_3"
			app:layout_constraintBottom_toTopOf="@id/label_slider_3"
			app:layout_constraintEnd_toStartOf="@id/slider"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/label_slider_1" />

		<TextView
			android:id="@+id/label_slider_3"
			style="@style/Description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/space_xl"
			android:layout_marginEnd="@dimen/space_m"
			android:text="@string/label_topic_4"
			app:layout_constraintBottom_toTopOf="@id/label_slider_4"
			app:layout_constraintEnd_toStartOf="@id/slider"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/label_slider_2" />

		<TextView
			android:id="@+id/label_slider_4"
			style="@style/Description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/space_xl"
			android:layout_marginEnd="@dimen/space_m"
			android:text="@string/label_topic_5"
			app:layout_constraintBottom_toTopOf="@id/label_slider_5"
			app:layout_constraintEnd_toStartOf="@id/slider"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/label_slider_3" />

		<TextView
			android:id="@+id/label_slider_5"
			style="@style/Description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/space_xl"
			android:layout_marginEnd="@dimen/space_m"
			android:layout_marginBottom="@dimen/slider_label_offset"
			android:text="@string/label_topic_6"
			app:layout_constraintBottom_toBottomOf="@id/slider"
			app:layout_constraintEnd_toStartOf="@id/slider"
			app:layout_constraintStart_toStartOf="parent" />

		<Button
			android:id="@+id/next_btn"
			android:layout_width="@dimen/space_xxl"
			android:layout_height="@dimen/space_xl"
			android:background="@drawable/forward_button_background"
			android:onClick="@{() -> vm.onNextClick()}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>